fixes footer so that it doesn't overlap content when window is resized

--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@ html, body {
 .dashboard {
   /* display: block; */
   justify-content: center;
+  height: 100% !important;
 }
 
 .dash-table {
@@ -274,6 +275,7 @@ footer {
   width: 100%;
   border-top: 1px solid rgb(237, 236, 236);
   box-shadow: -2px 0 4px rgba(0, 0, 0, 0.2);
+  bottom: 0;
 }
 /* FOOTER END */
 
@@ -286,7 +288,6 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
 }
 
 .login-modal form {
